# devsclae-assignment1

./: .env  database.db  pyproject.toml
alembic/: env.py
alembic/versions/: a8a56935ed6e_init_database_model.py  a9149c1f1530_fix_id_data_type.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/router/: group_test.py  metode_test.py
app/schema/: test_psikologi.py
